--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Lakshman7221.github.io/Agency",
+  "homepage": "https://Lakshman7221.github.io/React-Js-Interview/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
